# StarBs

./: .gitattributes  build.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/include/app/: sync_entities.h  sync_with_py.h
app/src/main/jni/include/hooks/: chams.h
app/src/main/jni/include/jni/: jni_stuff_alt.h
app/src/main/jni/include/utils/: dlfcn.h  draw.h  features.h  helpers.h  input.h  toggle.h
app/src/main/jni/src/: dlfcn.cpp  features.cpp  main.cpp  srcpy.cpp
